// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`< /> shapshots should render 1`] = `
<div
  className="icon "
  style={
    Object {
      "WebkitMaskImage": "url(https://some.url/something.svg)",
    }
  }
/>
`;

exports[`< /> shapshots should render with the given classname and style 1`] = `
<div
  className="icon myClass"
  style={
    Object {
      "WebkitMaskImage": "url(https://some.url/something.svg)",
      "color": "blue",
    }
  }
/>
`;

exports[`< /> shapshots should render with the shipped svg 1`] = `
<div
  className="icon "
  style={
    Object {
      "WebkitMaskImage": "url(This should show up)",
    }
  }
/>
`;
